(bugfix) Included a second channel in the config
Fixed some issue with the control plots and modified the config file.

--- a/ConfigFiles/MC_miniAOD_8TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_8TeV.cfg
@@ -6,7 +6,7 @@ General.RunOnData = 0
 General.DataPeriod = "8TeV"
 Trigger.IgnoreL1 = 1
 
-RPV.channel = "mutau"
+RPV.channel = "mutau,mutaue"
 RPV.trigger_list = HLT_HLT_Mu40_v12,HLT_HLT_Mu40_eta2p1_v9,HLT_HLT_IsoMu24_eta2p1_v13,HLT_HLT_IsoMu30_v9
 
 Trigger.Muo.Triggers = HLT_IsoMu24_eta2p1_v13
