--- a/ConfigFiles/Data_miniAOD_8TeV.cfg
+++ b/ConfigFiles/Data_miniAOD_8TeV.cfg
@@ -3,11 +3,12 @@
 import "$MUSIC_BASE/ConfigFiles/Classification_miniAOD_8TeV.cff"
 
 General.RunOnData = 1 
+General.RunConfig = "$MUSIC_BASE/ConfigFiles/Cert_190456-208686_8TeV_22Jan2013ReReco_Collisions12_JSON.txt"
 General.DataPeriod = "8TeV"
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
-RPV.trigger_list = HLT_HLT_Mu40_v12,HLT_HLT_Mu40_eta2p1_v9,HLT_HLT_IsoMu24_eta2p1_v13,HLT_HLT_IsoMu30_v9
+RPV.trigger_list = HLT_Mu40_eta2p1_v9,HLT_Mu40_eta2p1_v10,HLT_Mu40_eta2p1_v11
 
 rpv_mass.min = 0
 rpv_mass.max = 5000
