(EventRate_fixing) Fixed the trigger requirement in the config files
As for the trigger it is only checked if the part defined in the config file
is contained somwhere in one trigger name, and if this trigger fired then, it
is not necessary to include the trigger version number in the config file.

--- a/ConfigFiles/MC_miniAOD_8TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_8TeV.cfg
@@ -7,7 +7,7 @@ General.DataPeriod = "8TeV"
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
-RPV.trigger_list = HLT_Mu40_eta2p1_v9,HLT_Mu40_eta2p1_v10,HLT_Mu40_eta2p1_v11
+RPV.trigger_list = HLT_Mu40_eta2p1_v
 
 rpv_mass.min = 0
 rpv_mass.max = 5000
