(efficiencies) Included a switch if you want to do trigger studies
A boolean in your config file now decides if you want to make trigger studies
or not.

--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -4,6 +4,7 @@ import "$MUSIC_BASE/ConfigFiles/Classification_miniAOD_13TeV.cff"
 
 General.RunOnData = 0
 General.DataPeriod = "13TeV"
+General.DoTriggerStudies = true
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
