--- a/ConfigFiles/Data_miniAOD_8TeV.cfg
+++ b/ConfigFiles/Data_miniAOD_8TeV.cfg
@@ -5,7 +5,7 @@ import "$MUSIC_BASE/ConfigFiles/Classification_miniAOD_8TeV.cff"
 General.RunOnData = 1 
 General.RunConfig = "$MUSIC_BASE/ConfigFiles/Cert_190456-208686_8TeV_22Jan2013ReReco_Collisions12_JSON.txt"
 General.DataPeriod = "8TeV"
-General.DoTriggerStudies = false
+General.DoTriggerStudies = 0
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
