--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -4,7 +4,7 @@ import "$MUSIC_BASE/ConfigFiles/Classification_miniAOD_13TeV.cff"
 
 General.RunOnData = 0
 General.DataPeriod = "13TeV"
-General.DoTriggerStudies = true
+General.DoTriggerStudies = 1
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
