--- a/ConfigFiles/MC_miniAOD_8TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_8TeV.cfg
@@ -4,7 +4,7 @@ import "$MUSIC_BASE/ConfigFiles/Classification_miniAOD_8TeV.cff"
 
 General.RunOnData = 0
 General.DataPeriod = "8TeV"
-General.DoTriggerStudies = false
+General.DoTriggerStudies = 0
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
