--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -1,8 +1,10 @@
 # Based on /online/collisions/2012/7e33/v2.2/HLT/V6
 
-import "$MUSIC_BASE/specialAna/ConfigFiles/Classification_miniAOD_13TeV.cff"
+import "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/Classification_miniAOD_13TeV.cff"
 
 General.RunOnData = 0
+General.usePDF = 0
+General.useJES = 0
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 1
 Trigger.IgnoreL1 = 1
