Included the ID requiremnets of the analysis in the config file

--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -2,6 +2,18 @@
 
 import "$MUSIC_BASE/ConfigFiles/general.cff"
 
+Ele.ID.Type = "HEEP"
+Ele.IdTag = 1
+
+MET.IdTag = 1
+MET.Type.Rec = slimmedMETs
+
+Muon.IdTag = 1
+Muon.ID.Type="isHighPtMuon.bool"
+
+Tau.IdTag = 1
+Tau.Discriminators = decayModeFindingNewDMs
+
 General.RunOnData = 0
 General.usePDF = 0
 General.useJES = 0
