--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -22,7 +22,8 @@ General.DoTriggerStudies = 1
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
-RPV.trigger_list = HLT_HLT_Ele95_CaloIdVT_GsfTrkIdT_v1,HLT_HLT_Ele22_eta2p1_WP85_Gsf_LooseIsoPFTau20_v1,HLT_HLT_Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_v1,HLT_HLT_Mu17_TrkIsoVVL_TkMu8_TrkIsoVVL_v1,HLT_HLT_Mu23_TrkIsoVVL_Ele12_Gsf_CaloId_TrackId_Iso_MediumWP_v1,HLT_HLT_Mu17_Mu8_v1,HLT_HLT_Mu17_TkMu8_v1,HLT_HLT_Mu40_v1,HLT_HLT_Mu30_TkMu11_v1,HLT_HLT_IsoMu17_eta2p1_LooseIsoPFTau20_v1,HLT_HLT_Ele23_Ele12_CaloId_TrackId_Iso_v1
+#RPV.trigger_list = HLT_HLT_Ele95_CaloIdVT_GsfTrkIdT_v1,HLT_HLT_Ele22_eta2p1_WP85_Gsf_LooseIsoPFTau20_v1,HLT_HLT_Mu17_TrkIsoVVL_Mu8_TrkIsoVVL_v1,HLT_HLT_Mu17_TrkIsoVVL_TkMu8_TrkIsoVVL_v1,HLT_HLT_Mu23_TrkIsoVVL_Ele12_Gsf_CaloId_TrackId_Iso_MediumWP_v1,HLT_HLT_Mu17_Mu8_v1,HLT_HLT_Mu17_TkMu8_v1,HLT_HLT_Mu40_v1,HLT_HLT_Mu30_TkMu11_v1,HLT_HLT_IsoMu17_eta2p1_LooseIsoPFTau20_v1,HLT_HLT_Ele23_Ele12_CaloId_TrackId_Iso_v1
+RPV.trigger_list = HLT_HLT_Mu40_v1
 
 rpv_mass.min = 0
 rpv_mass.max = 5000
