JetBackgroundEstimation and Emu-Efficiency for Particles have been added (maybe somethingelse minor aswell)
Conflicts:
	ConfigFiles/MC_miniAOD_13TeV.cfg
	specialAna.cc
	specialAna.hh

--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -4,6 +4,7 @@ import "$MUSIC_BASE/ConfigFiles/general.cff"
 
 Ele.ID.Type = "HEEP"
 Ele.IdTag = 1
+Ele.DoFakeRate = 1
 
 MET.IdTag = 1
 MET.Type.Rec = slimmedMETs
