--- a/ConfigFiles/Data_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Data_miniAOD_13TeV.cfg
@@ -8,6 +8,7 @@ General.useJES = 0
 General.RunConfig = "$MUSIC_BASE/ConfigFiles/Cert_190456-208686_8TeV_22Jan2013ReReco_Collisions12_JSON.txt"
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 0
+General.DoSampleWeighting = 0
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
