--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -20,6 +20,7 @@ General.usePDF = 0
 General.useJES = 0
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 1
+General.DoSampleWeighting = 1
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
