--- a/ConfigFiles/MC_miniAOD_8TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_8TeV.cfg
@@ -5,6 +5,7 @@ import "$MUSIC_BASE/ConfigFiles/general.cff"
 General.RunOnData = 0
 General.DataPeriod = "8TeV"
 General.DoTriggerStudies = 0
+General.DoSampleWeighting = 0
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
