Included the config reading
- The needed values (xs, weight and Nev) are now read from the cfg file
- The luminosisty is given in the config file
- The value used for the reweighting is printed
- Still missing: Get the sample name from the datastream name

--- a/ConfigFiles/Data_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Data_miniAOD_13TeV.cfg
@@ -9,6 +9,7 @@ General.RunConfig = "$MUSIC_BASE/ConfigFiles/Cert_190456-208686_8TeV_22Jan2013Re
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 0
 General.DoSampleWeighting = 0
+General.lumi = 10000
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
