--- a/ConfigFiles/Data_miniAOD_8TeV.cfg
+++ b/ConfigFiles/Data_miniAOD_8TeV.cfg
@@ -7,6 +7,7 @@ General.RunConfig = "$MUSIC_BASE/ConfigFiles/Cert_190456-208686_8TeV_22Jan2013Re
 General.DataPeriod = "8TeV"
 General.DoTriggerStudies = 0
 General.DoSampleWeighting = 0
+General.lumi = 10000
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
