--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -21,6 +21,7 @@ General.useJES = 0
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 1
 General.DoSampleWeighting = 1
+General.lumi = 10000
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
