--- a/ConfigFiles/MC_miniAOD_8TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_8TeV.cfg
@@ -6,6 +6,7 @@ General.RunOnData = 0
 General.DataPeriod = "8TeV"
 General.DoTriggerStudies = 0
 General.DoSampleWeighting = 0
+General.lumi = 10000
 Trigger.IgnoreL1 = 1
 
 RPV.channel = "mutau,mutaue,emu"
