--- a/ConfigFiles/xs_Phys14.cfg
+++ b/ConfigFiles/xs_Phys14.cfg
@@ -741,7 +741,7 @@ Nev=    1
 [DYJetsToLL_M-50_13TeV-FXFX_MC]
 xs=     6104
 weight= 1
-Nev=    1
+Nev=    28276325
 
 [DYJetsToLL_M-100to200_13TeV-FXFX_MC]
 xs=     226.0
@@ -771,97 +771,97 @@ Nev=    1
 [WJetsToLNu_13TeV-FXFX_MC]
 xs=     50100
 weight= 1
-Nev=    1
+Nev=    24151270
 
 [QCD_Pt-15to20_MuEnrichedPt5_13TeV_P8]
 xs=     1273190000.0
 weight= 1
-Nev=    1
+Nev=    2359418
 
 [QCD_Pt-20to30_MuEnrichedPt5_13TeV_P8]
 xs=     1
 weight= 1
-Nev=    1
+Nev=    6612717
 
 [QCD_Pt-20toInf_MuEnrichedPt15_13TeV_P8]
 xs=     720648000.0
 weight= 1
-Nev=    1
+Nev=    13201693
 
 [QCD_Pt-30to50_MuEnrichedPt5_13TeV_P8]
 xs=     139803000.0
 weight= 1
-Nev=    1
+Nev=    4941786
 
 [QCD_Pt-50to80_MuEnrichedPt5_13TeV_P8]
 xs=     19222500.0
 weight= 1
-Nev=    1
+Nev=    5052887
 
 [QCD_Pt-80to120_MuEnrichedPt5_13TeV_P8]
 xs=     2758420.0
 weight= 1
-Nev=    1
+Nev=    3881032
 
 [QCD_Pt-120to170_MuEnrichedPt5_13TeV_P8]
 xs=     469797.0
 weight= 1
-Nev=    1
+Nev=    4026104
 
 [QCD_Pt-170to300_MuEnrichedPt5_13TeV_P8]
 xs=     1
 weight= 1
-Nev=    1
+Nev=    4286008
 
 [QCD_Pt-300to470_MuEnrichedPt5_13TeV_P8]
 xs=     1
 weight= 1
-Nev=    1
+Nev=    4235308
 
 [QCD_Pt-470to600_MuEnrichedPt5_13TeV_P8]
 xs=     645.528
 weight= 1
-Nev=    1
+Nev=    1928421
 
 [QCD_Pt-600to800_MuEnrichedPt5_13TeV_P8]
 xs=     187.109
 weight= 1
-Nev=    1
+Nev=    1983363
 
 [QCD_Pt-800to1000_MuEnrichedPt5_13TeV_P8]
 xs=     1
 weight= 1
-Nev=    1
+Nev=    2056059
 
 [QCD_Pt-1000toInf_MuEnrichedPt5_13TeV_P8]
 xs=     10.4305
 weight= 1
-Nev=    1
+Nev=    2023138
 
 [WW_13TeV_P8]
 xs=     63.21
 weight= 1
-Nev=    1
+Nev=    994416
 
 [WZ_13TeV_P8]
 xs=     22.82
 weight= 1
-Nev=    1
+Nev=    991232
 
 [ZZ_13TeV_P8]
 xs=     10.32
 weight= 1
-Nev=    1
+Nev=    1106621
 
 [TT_13TeV_PH]
 xs=     491.2
 weight= 1
-Nev=    1
+Nev=    19899500
 
 [TT_Mtt-1000toInf_13TeV_MCRUN2_74_V9_ext1-v2_PH]
 xs=     730
 weight= 1
-Nev=    1
+Nev=    2317108
 
 [ZprimeToTauTau_M-5000_PU20bx25_PHYS14]
 xs=     1
