Small fixes of different values
- Fixed the lumi on 1fb^-1 (was inconsistent 1 or 10 before)
- Included some missing cross section values
- Updtaed the sample name parsing

--- a/ConfigFiles/xs_Phys14.cfg
+++ b/ConfigFiles/xs_Phys14.cfg
@@ -773,6 +773,26 @@ xs=     50100
 weight= 1
 Nev=    24151270
 
+[WJetsToLNu_HT-100To200_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    1000
+
+[WJetsToLNu_HT-200To400_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    1000
+
+[WJetsToLNu_HT-400To600_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    1000
+
+[WJetsToLNu_HT-600ToInf_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    1000
+
 [QCD_Pt-15to20_MuEnrichedPt5_13TeV_P8]
 xs=     1273190000.0
 weight= 0.003
@@ -837,6 +857,11 @@ Nev=    2056059
 xs=     10.4305
 weight= 0.15544
 Nev=    2023138
+
+[WWTo2L2Nu_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    1000
 
 [WW_13TeV_P8]
 xs=     63.21
