Included some cross section values in the config file

--- a/ConfigFiles/xs_Phys14.cfg
+++ b/ConfigFiles/xs_Phys14.cfg
@@ -38,6 +38,21 @@ xs=     0.00054
 weight= 1
 Nev=    95200
 
+[DYJetsToLL_M-200to400_13TeV-FXFX_MC]
+xs=     7.67
+weight= 1
+Nev=    190976
+
+[DYJetsToLL_M-800to1000_13TeV-FXFXRaw_MC]
+xs=     0.03
+weight= 1
+Nev=    89216
+
+[DYJetsToLL_M-400to500_13TeV-FXFX_MC]
+xs=     0.423
+weight= 1
+Nev=    98441
+
 [WJetsToLNu_13TeV-FXFX_MC]
 xs=     60290
 weight= 1
@@ -128,6 +143,11 @@ xs=     10.4305
 weight= 0.15544
 Nev=    2023138
 
+[QCD_Pt-15TTo7000-Flat_13TeV_P6]
+xs=     89731000000.0
+weight= 1
+Nev=    9755422
+
 [WWTo2L2Nu_13TeV_PH]
 xs=     1
 weight= 1
@@ -157,6 +177,31 @@ Nev=    19899500
 xs=     730
 weight= 0.0921
 Nev=    2317108
+
+[ST_t-channel_4f_leptonDecays_13TeV-_MC]
+xs=     216.99
+weight= 1
+Nev=    19854408
+
+[ST_tW_top_5f_inclusiveDecays_13TeV_PH]
+xs=     38.09
+weight= 1
+Nev=    995600
+
+[ST_t-channel_5f_leptonDecays_13TeV-_MC]
+xs=     216.99
+weight= 1
+Nev=    2966200
+
+[ST_s-channel_4f_leptonDecays_13TeV-_MC]
+xs=     10.11
+weight= 1
+Nev=    984400
+
+[ST_tW_antitop_5f_inclusiveDecays_13TeV_PH]
+xs=     38.09
+weight= 1
+Nev=    2000000
 
 [ZprimeToTauTau_M-5000_PU20bx25_PHYS14]
 xs=     1
