Included a first preliminary pileup reweighting
The definitions in the config files are included. Also the MC
and data pileup distributions (observed not truth) are included.

--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -36,6 +36,12 @@ rpv_mass.max = 5000
 rpv_coupling.min = 0.
 rpv_coupling.max = 100
 
+Pileup.UsePileupReWeighting = 1
+Pileup.DataHistFile = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/data_pileup.root"
+Pileup.DataHistName = "h1_Ctr_Vtx_unweighted"
+Pileup.GenHistFile = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/mc_pileup.root"
+Pileup.GenHistName = "h1_Ctr_Vtx_unweighted"
+
 Trigger.Muo.Triggers = HLT_IsoMu24_eta2p1_v13
 Trigger.Muo.Require = 0
 Trigger.Muo.Reject = 0
