Some updates to the config files
The ID names for muons and b-tags were updated in the config,
also the JSON file was updated.

--- a/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
@@ -10,15 +10,17 @@ MET.IdTag = 1
 MET.Type.Rec = slimmedMETs
 
 Muon.IdTag = 1
-Muon.ID.Type="isHighPtMuon.bool"
+Muon.ID.Type="HighPtID"
 
 Tau.IdTag = 1
 Tau.Discriminators = decayModeFindingNewDMs
 
+Jet.BJets.Algo = "combinedSecondaryVertexBJetTags"
+
 General.RunOnData = 1 
 General.usePDF = 0
 General.useJES = 0
-General.RunConfig = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/dummy_json.txt"
+General.RunConfig = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/Cert_246908-251883_13TeV_PromptReco_Collisions15_JSON_v2.txt"
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 0
 General.DoSampleWeighting = 0
