Included the systematic switches in the relevant config files
Systematics are now only activated for MC samples.

--- a/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
@@ -27,6 +27,9 @@ General.DoSampleWeighting = 0
 General.lumi = 10000
 Trigger.IgnoreL1 = 1
 
+General.useSYST = 0
+General.Syst.fullview = 0
+
 RPV.channel = "mutau,mutaue,emu"
 RPV.trigger_list = HLT_HLT_Mu50_v1,HLT_HLT_Mu40_v1
 
