--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -24,6 +24,9 @@ General.DoSampleWeighting = 1
 General.lumi = 1000
 Trigger.IgnoreL1 = 1
 
+General.useSYST = 1
+General.Syst.fullview = 0
+
 Jet.BJets.Algo = "combinedSecondaryVertexBJetTags"
 
 RPV.channel = "mutau,mutaue,emu"
