Included a switch to activate the pxlio writing function (default = True)

--- a/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
@@ -30,6 +30,8 @@ Trigger.IgnoreL1 = 1
 General.useSYST = 0
 General.Syst.fullview = 0
 
+General.writePxlio = 1
+
 RPV.channel = "mutau,mutaue,emu"
 RPV.trigger_list = HLT_HLT_Mu50_v1,HLT_HLT_Mu40_v1
 
