--- a/ConfigFiles/MC_miniAOD_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_13TeV.cfg
@@ -27,6 +27,8 @@ Trigger.IgnoreL1 = 1
 General.useSYST = 1
 General.Syst.fullview = 0
 
+General.writePxlio = 1
+
 Jet.BJets.Algo = "combinedSecondaryVertexBJetTags"
 
 RPV.channel = "mutau,mutaue,emu"
