--- a/ConfigFiles/Datadriven_miniAOD_reskim_13TeV.cfg
+++ b/ConfigFiles/Datadriven_miniAOD_reskim_13TeV.cfg
@@ -4,21 +4,23 @@ import "$MUSIC_BASE/ConfigFiles/general.cff"
 
 Ele.ID.Type = "HEEP"
 Ele.IdTag = 1
-Ele.DoFakeRate = 0
+Ele.DoFakeRate = 1
 
 MET.IdTag = 1
 MET.Type.Rec = slimmedMETs
 
 Muon.IdTag = 1
-Muon.ID.Type="isHighPtMuon.bool"
+Muon.ID.Type="HighPtID"
 
 Tau.IdTag = 1
 Tau.Discriminators = decayModeFindingNewDMs
 
+Jet.BJets.Algo = "combinedSecondaryVertexBJetTags"
+
 General.RunOnData = 1 
 General.usePDF = 0
 General.useJES = 0
-General.RunConfig = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/json_DCSONLY.txt"
+General.RunConfig = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/Cert_246908-251883_13TeV_PromptReco_Collisions15_JSON_v2.txt"
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 0
 General.DoSampleWeighting = 0
@@ -28,7 +30,7 @@ Trigger.IgnoreL1 = 1
 General.useSYST = 0
 General.Syst.fullview = 0
 
-General.writePxlio = 0
+General.writePxlio = 1
 
 RPV.channel = "mutau,mutaue,emu"
 RPV.trigger_list = HLT_HLT_Mu50_v1,HLT_HLT_Mu40_v1
@@ -77,3 +79,4 @@ Trigger.DTa.Reject = 0
 Trigger.DGa.Triggers =
 Trigger.DGa.Require = 0
 Trigger.DGa.Reject = 0
+
