Updated the muon ID requirement
The changes are in detail:
- Now cocktail muons are used
- The dz cut is deacitivated due to problems with PV assignment
- The isolation requiremnet is set to the loos relatice tracker isolation

--- a/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Datadriven_miniAOD_13TeV.cfg
@@ -11,6 +11,10 @@ MET.Type.Rec = slimmedMETs
 
 Muon.IdTag = 1
 Muon.ID.Type="HighPtID"
+Muon.UseCocktail = 1
+Muon.HighPtID.Dz.max = 150
+Muon.Iso.Type = "TrackerIso"
+Muon.Iso.max = 0.1
 
 Tau.IdTag = 1
 Tau.Discriminators = decayModeFindingNewDMs
