--- a/ConfigFiles/Data_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Data_miniAOD_13TeV.cfg
@@ -10,7 +10,11 @@ MET.IdTag = 1
 MET.Type.Rec = slimmedMETs
 
 Muon.IdTag = 1
-Muon.ID.Type="isHighPtMuon.bool"
+Muon.ID.Type="HighPtID"
+Muon.UseCocktail = 1
+Muon.HighPtID.Dz.max = 150
+Muon.Iso.Type = "TrackerIso"
+Muon.Iso.max = 0.1
 
 Tau.IdTag = 1
 Tau.Discriminators = decayModeFindingNewDMs
