--- a/ConfigFiles/MC_miniAOD_reskim_13TeV.cfg
+++ b/ConfigFiles/MC_miniAOD_reskim_13TeV.cfg
@@ -11,6 +11,10 @@ MET.Type.Rec = slimmedMETs
 
 Muon.IdTag = 1
 Muon.ID.Type="HighPtID"
+Muon.UseCocktail = 1
+Muon.HighPtID.Dz.max = 150
+Muon.Iso.Type = "TrackerIso"
+Muon.Iso.max = 0.1
 
 Tau.IdTag = 1
 Tau.Discriminators = decayModeFindingNewDMs
