--- a/ConfigFiles/xs_Phys14.cfg
+++ b/ConfigFiles/xs_Phys14.cfg
@@ -293,4 +293,378 @@ xs=     3.3123e-09
 weight= 1
 Nev=    15000
 
+[QCD_Pt-20to30_MuEnrichedPt5_13TeV_P8]
+xs=     1
+weight= 1
+Nev=    5195469
+
+[QCD_Pt-80to120_MuEnrichedPt5_13TeV_P8]
+xs=     1
+weight= 1
+Nev=    3881032
+
+[QCD_Pt-120to170_MuEnrichedPt5_13TeV_P8]
+xs=     1
+weight= 1
+Nev=    4026104
+
+[QCD_Pt-1000toInf_MuEnrichedPt5_13TeV_P8]
+xs=     1
+weight= 1
+Nev=    1981954
+
+[ST_tW_antitop_5f_inclusiveDecays_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    1000000
+
+[ST_tW_top_5f_inclusiveDecays_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    995600
+
+[ST_t-channel_antitop_4f_leptonDecays_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    1695400
+
+[ST_t-channel_top_4f_leptonDecays_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    3250200
+
+[TTTo2L2Nu_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    4972773
+
+[TT_13TeV_MCRUN2_74_V9_ext3-v1_PH]
+xs=     1
+weight= 1
+Nev=    92145600
+
+[TT_Mtt-1000toInf_13TeV_MCRUN2_74_V9_ext1-v2_PH]
+xs=     1
+weight= 1
+Nev=    2317108
+
+[WJetsToLNu_HT-100To200_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    10114070
+
+[WJetsToLNu_HT-400To600_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    1861950
+
+[WJetsToLNu_HT-600To800_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    3970558
+
+[WJetsToLNu_HT-800To1200_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    1574633
+
+[WJetsToLNu_HT-2500ToInf_13TeVMLM_MG]
+xs=     1
+weight= 1
+Nev=    253036
+
+[WWTo2L2Nu_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    1930000
+
+[WWTo4Q_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    1995200
+
+[WWToLNuQQ_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    1969600
+
+[WZTo3LNu_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    1925000
+
+[ZToEE_NNPDF30_13TeV_M_50_120_PH]
+xs=     1
+weight= 1
+Nev=    2996800
+
+[ZToEE_NNPDF30_13TeV_M_120_200_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToEE_NNPDF30_13TeV_M_200_400_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToEE_NNPDF30_13TeV_M_400_800_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToEE_NNPDF30_13TeV_M_800_1400_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToEE_NNPDF30_13TeV_M_1400_2300_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToEE_NNPDF30_13TeV_M_3500_4500_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToEE_NNPDF30_13TeV_M_6000_Inf_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToMuMu_NNPDF30_13TeV_M_50_120_PH]
+xs=     1
+weight= 1
+Nev=    2848076
+
+[ZToMuMu_NNPDF30_13TeV_M_200_400_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToMuMu_NNPDF30_13TeV_M_400_800_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToMuMu_NNPDF30_13TeV_M_800_1400_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToMuMu_NNPDF30_13TeV_M_3500_4500_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToMuMu_NNPDF30_13TeV_M_4500_6000_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZToMuMu_NNPDF30_13TeV_M_6000_Inf_PH]
+xs=     1
+weight= 1
+Nev=    100000
+
+[ZZTo2L2Nu_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    8427950
+
+[ZZTo4L_13TeV_PH]
+xs=     1
+weight= 1
+Nev=    6652512
+
+[RPVresonantToEMu_M-200_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-300_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-400_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-500_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-600_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-700_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-800_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-900_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-1000_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-1200_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-1400_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-1600_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-1800_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-2000_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-2500_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-3000_LLE_LQD-01_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-3000_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-3500_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-3500_LLE_LQD-01_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-4000_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-4000_LLE_LQD-01_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-4000_LLE_LQD-02_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-4000_LLE_LQD-05_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-4500_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-4500_LLE_LQD-02_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-4500_LLE_LQD-05_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    8800
+
+[RPVresonantToEMu_M-5000_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-5000_LLE_LQD-02_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    5000
+
+[RPVresonantToEMu_M-5000_LLE_LQD-05_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-5500_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-5500_LLE_LQD-02_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-5500_LLE_LQD-05_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-6000_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    14400
+
+[RPVresonantToEMu_M-6000_LLE_LQD-02_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-6000_LLE_LQD-05_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-6500_LLE_LQD-001_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-6500_LLE_LQD-02_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
+
+[RPVresonantToEMu_M-6500_LLE_LQD-05_13TeV_CA]
+xs=     1
+weight= 1
+Nev=    15000
 
