Included xs infos for the latest samples

--- a/ConfigFiles/xs_Phys14.cfg
+++ b/ConfigFiles/xs_Phys14.cfg
@@ -294,42 +294,42 @@ weight= 1
 Nev=    15000
 
 [QCD_Pt-20to30_MuEnrichedPt5_13TeV_P8]
-xs=     1
-weight= 1
+xs=     558528000
+weight= 0.0053
 Nev=    5195469
 
 [QCD_Pt-80to120_MuEnrichedPt5_13TeV_P8]
-xs=     1
-weight= 1
+xs=     2758420.0
+weight= 0.03844
 Nev=    3881032
 
 [QCD_Pt-120to170_MuEnrichedPt5_13TeV_P8]
-xs=     1
-weight= 1
+xs=     469797
+weight= 0.05362
 Nev=    4026104
 
 [QCD_Pt-1000toInf_MuEnrichedPt5_13TeV_P8]
-xs=     1
-weight= 1
+xs=     10.4305
+weight= 0.15544
 Nev=    1981954
 
 [ST_tW_antitop_5f_inclusiveDecays_13TeV_PH]
-xs=     1
+xs=     38.09
 weight= 1
 Nev=    1000000
 
 [ST_tW_top_5f_inclusiveDecays_13TeV_PH]
-xs=     1
+xs=     38.09
 weight= 1
 Nev=    995600
 
 [ST_t-channel_antitop_4f_leptonDecays_13TeV_PH]
-xs=     1
+xs=     80.95
 weight= 1
 Nev=    1695400
 
 [ST_t-channel_top_4f_leptonDecays_13TeV_PH]
-xs=     1
+xs=     103.02
 weight= 1
 Nev=    3250200
 
@@ -339,37 +339,47 @@ weight= 1
 Nev=    4972773
 
 [TT_13TeV_MCRUN2_74_V9_ext3-v1_PH]
-xs=     1
+xs=     730
 weight= 1
 Nev=    92145600
 
+[TT_Mtt-700to1000_13TeV_MCRUN2_74_V9_ext1-v2_PH]
+xs=     730
+weight= 0.0921
+Nev=    1
+
 [TT_Mtt-1000toInf_13TeV_MCRUN2_74_V9_ext1-v2_PH]
-xs=     1
-weight= 1
+xs=     730
+weight= 0.02474
 Nev=    2317108
 
 [WJetsToLNu_HT-100To200_13TeVMLM_MG]
-xs=     1
+xs=     1347
 weight= 1
 Nev=    10114070
 
+[WJetsToLNu_HT-200To400_13TeVMLM_MG]
+xs=     360
+weight= 1
+Nev=    1
+
 [WJetsToLNu_HT-400To600_13TeVMLM_MG]
-xs=     1
+xs=     48.98
 weight= 1
 Nev=    1861950
 
 [WJetsToLNu_HT-600To800_13TeVMLM_MG]
-xs=     1
+xs=     12.8
 weight= 1
 Nev=    3970558
 
 [WJetsToLNu_HT-800To1200_13TeVMLM_MG]
-xs=     1
+xs=     5.261
 weight= 1
 Nev=    1574633
 
 [WJetsToLNu_HT-2500ToInf_13TeVMLM_MG]
-xs=     1
+xs=     0.03089
 weight= 1
 Nev=    253036
 
@@ -389,282 +399,307 @@ weight= 1
 Nev=    1969600
 
 [WZTo3LNu_13TeV_PH]
-xs=     1
+xs=     4.42965
 weight= 1
 Nev=    1925000
 
 [ZToEE_NNPDF30_13TeV_M_50_120_PH]
-xs=     1
+xs=     1975
 weight= 1
 Nev=    2996800
 
 [ZToEE_NNPDF30_13TeV_M_120_200_PH]
-xs=     1
+xs=     19.32
 weight= 1
 Nev=    100000
 
 [ZToEE_NNPDF30_13TeV_M_200_400_PH]
-xs=     1
+xs=     2.731
 weight= 1
 Nev=    100000
 
 [ZToEE_NNPDF30_13TeV_M_400_800_PH]
-xs=     1
+xs=     0.241
 weight= 1
 Nev=    100000
 
 [ZToEE_NNPDF30_13TeV_M_800_1400_PH]
-xs=     1
+xs=     0.01678
 weight= 1
 Nev=    100000
 
 [ZToEE_NNPDF30_13TeV_M_1400_2300_PH]
-xs=     1
+xs=     0.00139
 weight= 1
 Nev=    100000
+
+[ZToEE_NNPDF30_13TeV_M_2300_3500_PH]
+xs=     8.948e-5
+weight= 1
+Nev=    1
 
 [ZToEE_NNPDF30_13TeV_M_3500_4500_PH]
-xs=     1
+xs=     4.135e-6
 weight= 1
 Nev=    100000
 
+[ZToEE_NNPDF30_13TeV_M_4500_6000_PH]
+xs=     4.56e-7
+weight= 1
+Nev=    1
+
 [ZToEE_NNPDF30_13TeV_M_6000_Inf_PH]
-xs=     1
+xs=     2.066e-8
 weight= 1
 Nev=    100000
 
 [ZToMuMu_NNPDF30_13TeV_M_50_120_PH]
-xs=     1
+xs=     1975
 weight= 1
 Nev=    2848076
 
+[ZToMuMu_NNPDF30_13TeV_M_120_200_PH]
+xs=     19.32
+weight= 1
+Nev=    1
+
 [ZToMuMu_NNPDF30_13TeV_M_200_400_PH]
-xs=     1
+xs=     2.731
 weight= 1
 Nev=    100000
 
 [ZToMuMu_NNPDF30_13TeV_M_400_800_PH]
-xs=     1
+xs=     0.241
 weight= 1
 Nev=    100000
 
 [ZToMuMu_NNPDF30_13TeV_M_800_1400_PH]
-xs=     1
+xs=     0.01678
 weight= 1
 Nev=    100000
 
+[ZToMuMu_NNPDF30_13TeV_M_1400_2300_PH]
+xs=     0.00139
+weight= 1
+Nev=    1
+
+[ZToMuMu_NNPDF30_13TeV_M_2300_3500_PH]
+xs=     8.948e-5
+weight= 1
+Nev=    1
+
 [ZToMuMu_NNPDF30_13TeV_M_3500_4500_PH]
-xs=     1
+xs=     4.135e-6
 weight= 1
 Nev=    100000
 
 [ZToMuMu_NNPDF30_13TeV_M_4500_6000_PH]
-xs=     1
+xs=     4.56e-7
 weight= 1
 Nev=    100000
 
 [ZToMuMu_NNPDF30_13TeV_M_6000_Inf_PH]
-xs=     1
+xs=     2.066e-8
 weight= 1
 Nev=    100000
 
 [ZZTo2L2Nu_13TeV_PH]
-xs=     1
+xs=     0.5644
 weight= 1
 Nev=    8427950
 
 [ZZTo4L_13TeV_PH]
-xs=     1
+xs=     1.256
 weight= 1
 Nev=    6652512
 
 [RPVresonantToEMu_M-200_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     585.35
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-300_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     158.04
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-400_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     59.97
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-500_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     27.612
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-600_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     14.415
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-700_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     8.1833
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-800_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     4.9538
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-900_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     3.1345
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-1000_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     2.0611
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-1200_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.96973
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-1400_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.49332
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-1600_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.26708
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-1800_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.14995
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-2000_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.08639
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-2500_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.023951
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-3000_LLE_LQD-01_13TeV_CA]
-xs=     1
+xs=     0.71654
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-3000_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.0071592
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-3500_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.002136
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-3500_LLE_LQD-01_13TeV_CA]
-xs=     1
+xs=     0.21681
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-4000_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.00064163
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-4000_LLE_LQD-01_13TeV_CA]
-xs=     1
+xs=     0.065772
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-4000_LLE_LQD-02_13TeV_CA]
-xs=     1
+xs=     0.28243
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-4000_LLE_LQD-05_13TeV_CA]
-xs=     1
+xs=     2.601
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-4500_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     0.00018451
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-4500_LLE_LQD-02_13TeV_CA]
-xs=     1
+xs=     0.090249
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-4500_LLE_LQD-05_13TeV_CA]
-xs=     1
+xs=     1.0769
 weight= 1
 Nev=    8800
 
 [RPVresonantToEMu_M-5000_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     5.1376e-5
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-5000_LLE_LQD-02_13TeV_CA]
-xs=     1
+xs=     0.030614
 weight= 1
 Nev=    5000
 
 [RPVresonantToEMu_M-5000_LLE_LQD-05_13TeV_CA]
-xs=     1
+xs=     0.51715
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-5500_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     1.3505e-5
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-5500_LLE_LQD-02_13TeV_CA]
-xs=     1
+xs=     0.011984
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-5500_LLE_LQD-05_13TeV_CA]
-xs=     1
+xs=     0.29041
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-6000_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     3.3123e-6
 weight= 1
 Nev=    14400
 
 [RPVresonantToEMu_M-6000_LLE_LQD-02_13TeV_CA]
-xs=     1
+xs=     0.0058464
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-6000_LLE_LQD-05_13TeV_CA]
-xs=     1
+xs=     0.18438
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-6500_LLE_LQD-001_13TeV_CA]
-xs=     1
+xs=     7.8732e-7
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-6500_LLE_LQD-02_13TeV_CA]
-xs=     1
+xs=     0.0035114
 weight= 1
 Nev=    15000
 
 [RPVresonantToEMu_M-6500_LLE_LQD-05_13TeV_CA]
-xs=     1
+xs=     0.12693
 weight= 1
 Nev=    15000
 
