Updated the config files to the latest trigger requirement

--- a/ConfigFiles/Data_miniAOD_13TeV.cfg
+++ b/ConfigFiles/Data_miniAOD_13TeV.cfg
@@ -19,15 +19,17 @@ Muon.Iso.max = 0.1
 Tau.IdTag = 1
 Tau.Discriminators = decayModeFindingNewDMs
 
-General.RunOnData = 1 
+General.RunOnData = 1
 General.usePDF = 0
 General.useJES = 0
-General.RunConfig = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/json_DCSONLY.txt"
+General.RunConfig = "$MUSIC_BASE/RPV-LFV-Analyzer/ConfigFiles/Cert_246908-256869_13TeV_PromptReco_Collisions15_25ns_JSON.txt"
 General.DataPeriod = "13TeV"
 General.DoTriggerStudies = 0
 General.DoSampleWeighting = 0
 General.lumi = 10000
 Trigger.IgnoreL1 = 1
+
+Jet.BJets.Algo = "combinedSecondaryVertexBJetTags"
 
 General.useSYST = 0
 General.Syst.fullview = 0
@@ -35,7 +37,7 @@ General.Syst.fullview = 0
 General.writePxlio = 0
 
 RPV.channel = "mutau,mutaue,emu"
-RPV.trigger_list = HLT_HLT_Mu50_v1,HLT_HLT_Mu40_v1
+RPV.trigger_list = HLT_HLT_Mu50_v1,HLT_HLT_Mu50_v2,HLT_HLT_Mu40_v1
 
 rpv_mass.min = 0
 rpv_mass.max = 5000
